[package]
name = "htloader"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.17.0", features = ["exts", "alloc"] }
uefi-services = "0.14.0"
goblin = { version = "0.5.4", default-features = false, features = [
    "elf64",
    "endian_fd",
    "elf32",
] }
x86_64 = "0.14.10"
crossbeam = { version = "0.8.2", default-features = false }

common = { path = "../common" }
