[package]
name = "htvmm"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = { version = "0.8.2", default-features = false }
x86_64 = "0.14.10"
linked_list_allocator = "0.10.4"
bitflags = "1.3.2"
lazy_static = { version = "1.4.0", default-features = false, features = [
    "spin_no_std",
] }
iced-x86 = { version = "1.18.0", default-features = false, features = [
    "no_std",
    "decoder",
    "gas",
] }

common = { path = "../common" }

[features]
gpd = []

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0.73"
